2006-10-20  Alice Liu  <alice.liu@apple.com>

        Reviewed by Maciej.

        Adding knowledge of EditorClient to WebKit

        * WebCoreSupport/WebEditorClient.h: Added.

        * WebCoreSupport/WebEditorClient.mm: Added.
        (WebEditorClient::WebEditorClient):
        (WebEditorClient::~WebEditorClient):
        (WebEditorClient::shouldDeleteRange):
        Implementation of mac EditorClient

        * WebCoreSupport/WebFrameBridge.m:
        (-[WebFrameBridge initMainFrameWithPage:frameName:view:]):
        (-[WebFrameBridge initSubframeWithOwnerElement:frameName:view:]):
        create an editor client to pass down the chain of constructors

        * WebKit.xcodeproj/project.pbxproj:
        Added related EditorClient files

        * WebKitPrefix.h:
        Added tiger build flag in order to make certain private headers from webcore compile successfully

2006-10-20  Darin Adler  <darin@apple.com>

        - rolled out my loader change; caused world leak and possibly a plug-in crash

2006-10-20  Darin Adler  <darin@apple.com>

        Reviewed by Adele.

        - convert WebLoader and its 3 subclasses to C++

        * Plugins/WebNetscapePluginStream.h:
        * Plugins/WebNetscapePluginStream.m:
        (-[WebNetscapePluginStream dealloc]):
        (-[WebNetscapePluginStream finalize]):
        (-[WebNetscapePluginStream start]):
        (-[WebNetscapePluginStream cancelLoadWithError:]):
        (-[WebNetscapePluginStream stop]):
        * WebCoreSupport/WebFrameBridge.m:
        (-[WebFrameBridge canRunModalNow]):
        * WebView/WebFrame.m:
        (-[WebFramePrivate dealloc]):
        (-[WebFramePrivate finalize]):
        (frame): Changed from uppercase to lowercase so that it won't conflict
        with the WebCore class named Frame.
        (-[WebFrame _firstChildFrame]):
        (-[WebFrame _lastChildFrame]):
        (-[WebFrame _previousSiblingFrame]):
        (-[WebFrame _nextSiblingFrame]):